New Depsgraph: running 'animation/driver-object-eyes.blend' regression file flickers #45238

Closed
opened 2015-06-29 21:42:57 +02:00 by Bastien Montagne · 5 comments

System Information
Operating system and graphics card

Blender Version
Broken: 2.75 release branch
Worked: (optional)

Short description of error

Simply start Blender with new depsgraph, open animation/driver-object-eyes.blend from regression test files, and hit alt - A.

You'll get some frames like that (also reproducible but simply navigating between frames with arrow keys, but not as visible as when playing anim).

Capture d'écran de 2015-06-29 21-38-33.png

**System Information** Operating system and graphics card **Blender Version** Broken: 2.75 release branch Worked: (optional) **Short description of error** Simply start Blender with new depsgraph, open `animation/driver-object-eyes.blend` from regression test files, and hit `alt - A`. You'll get some frames like that (also reproducible but simply navigating between frames with arrow keys, but not as visible as when playing anim). ![Capture d'écran de 2015-06-29 21-38-33.png](https://archive.blender.org/developer/F198607/Capture_d_écran_de_2015-06-29_21-38-33.png)
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Sergey Sharybin was assigned by Bastien Montagne 2015-06-29 21:42:57 +02:00
Author
Owner

Added subscriber: @mont29

Added subscriber: @mont29
Author
Owner

Note that this seems to affect other kind of animated deformations (lattice, softbodied curves #45247, etc.).

Note that this seems to affect other kind of animated deformations (lattice, softbodied curves #45247, etc.).

This issue was referenced by 21db9fff12

This issue was referenced by 21db9fff125410d05f17a6663c0e8be583b5f98f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45238
No description provided.