Fix T45238: New depsgraph flickers with the lattice modifier